--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .app {
     align-items: center;
     display: flex;
     justify-content: space-around;
+    background-color: #4049aa;
+    height: 100vh;
+
   
   }
   
@@ -63,6 +71,9 @@
     text-align: center;
     width: 100%;
   }
+  .submit:hover{
+    background-color: rgb(67, 163, 223);
+  }
   
   .submit:active {
     background-color: #06b;
@@ -72,9 +83,42 @@
       list-style: none;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       border-radius: 12px;
-      padding: 10px;
+      padding: 30px;
       margin-top: 20px;
+      color: rgb(158, 157, 157);
+      background-color: #15172b;
+    }
+    .list h2{
+        margin-bottom: 0;
+        color: #eee;
   }
-  .list h2{
-      margin-bottom: 0;
+  .edit-btn{
+      margin: 10px;
+      padding: 10px;
+      border-radius: 12px;
+      border: none;
+      font-size: 15px;
+      background-color: #08d;
+      box-sizing: border-box;
+      color: #eee;
+      cursor: pointer;
+      font-size: 18px;
+  }
+  .edit-btn:hover{
+    background-color: rgb(67, 163, 223);
+  }
+  .delete-btn{
+  
+    padding: 10px;
+    border-radius: 12px;
+    border: none;
+    font-size: 15px;
+    background-color: rgb(148, 28, 28);
+    box-sizing: border-box;
+    color: #eee;
+    cursor: pointer;
+    font-size: 18px;
+  }
+  .delete-btn:hover{
+    background-color: rgb(206, 74, 74);
   }
